feat(Post): 新增單一文章圖片顯示元件並設定 packageManager

--- a/src/data/post/life/20220522-WFH真的有這麼美好嗎.mdx
+++ b/src/data/post/life/20220522-WFH真的有這麼美好嗎.mdx
@@ -2,7 +2,7 @@
 publishDate: 2022-05-22T10:11:35
 title:  "WFH真的有這麼美好嗎？"
 excerpt: 在家工作後，才懂通勤的好處，原是負擔的通勤時間，無法出門之後才懂其中意義
-category: [Life]
+category: Life
 tags: 
  - 生活
  - 工作
